added admin page and finally connected to backend
