# backend/internal/dto/auth.go
@@ -1,25 +1,10 @@
 package dto
 
-type UserRegisterRequest struct {
-	Name     string `json:"name" binding:"required"`
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required"`
-}
-
 type UserLoginRequest struct {
-	Email    string `json:"email" binding:"required,email"`
 	Password string `json:"password" binding:"required"`
-}
-
-type UserResponse struct {
-	ID        int    `json:"id"`
-	Name      string `json:"name"`
-	Email     string `json:"email"`
-	CreatedAt string `json:"created_at,omitempty"`
-	UpdatedAt string `json:"updated_at,omitempty"`
 }
 
 type LoginResponse struct {
-	Message string       `json:"message"`
-	User    UserResponse `json:"user"`
+	Message string `json:"message"`
+	Token   string `json:"token,omitempty"`
 }
